# tracetransform

./: .clang-format  .gitignore  .gitmodules  Apply_Pfunct.asv  Apply_Pfunct.m  CMakeLists.txt  Cam1_V1.pgm  FunctionalT0.c  FunctionalT1.c  FunctionalT2.c  FunctionalT3.c  FunctionalT4.c  FunctionalT5.c  FunctionalT6.c  FunctionalT7.c  INSTALL  Makefile  OrthTraceSign.m  OrthTraceTransform.m  README  README.md  REQUIRE  Scenter.m  Sinogram_center.m  Stacking.m  TODO  TraceSignatures.c  TraceTransform.c  TraceTransform.m  TraceTransform.sci  auxiliary.jl  auxiliary.sci  benchmark.m  benchmark_single.m  circus.jl  circusfunction.jl  compare.jl  compiling_files.m  demo.asv  demo.jl  (+32 more)
CMakeModules/: FindArrayFire.cmake  FindCULA.cmake  FindEigen3.cmake  FindElfutils.cmake  FindFFTW.cmake  FindMKL.cmake
c++/: README
c++/src/: auxiliary.cpp  demo.cpp  sinogram.cpp  transform.cpp
cuda/: README
cuda/CMakeModules/: FindElfutils.cmake
cuda/src/: auxiliary.hpp  circus.cpp  circus.hpp  demo.cpp  logger.hpp  progress.hpp  rottest.cpp  sinogram.cpp  sinogram.hpp  transform.cpp
cuda/src/kernels/: functionals.cu  nos.cu  rotate.cu  rotate.hpp  sort.cu
julia/: .gitignore  TODO  auxiliary.jl  demo.jl
lib/hayai/: hayai-test.hpp
matlab/: demo.m  prepare_transform.m
matlab-mex/: .gitignore  FunctionalT1.c  FunctionalT4.c  FunctionalT6.c  FunctionalT7.c  Makefile  TraceTransform.c  demo.m  rottest.m  vecWMfinal.c
octave/: demo.sh  hermite_wpol.m
openmp/: README
openmp/CMakeModules/: FindFFTW.cmake  FindMKL.cmake
openmp/src/: README  auxiliary.hpp  circus.cpp  functionals.cpp  sinogram.cpp
res/: indicator.pgm  indicator_1.pgm  indicator_2.pgm  indicator_3.pgm  indicator_4.pgm  indicator_5.pgm  indicator_5i.pgm  indicator_5j.pgm  indicator_6.pgm  square.pgm
scilab/: .gitignore  demo.sce  hermite_wpol.sci  rottest.sce  transform.sci
src/: README  auxiliary.cpp  auxiliary.h  auxiliary.hpp  benchmark.cpp  circus.cpp  circus.hpp  circusfunction.h  demo.cpp  functionals.c  functionals.cpp  functionals.h  functionals.hpp  global.hpp  improc.hpp  iterators.h  logger.cpp  logger.hpp  main.cpp  main.gp  main2.cpp  orthocircusfunction.h  progress.hpp  rottest.cpp  sinogram.cpp  sinogram.hpp  test_image.cpp  test_tutorial.cpp  traceiterator.h  tracetransform.h  transform.cpp  transform.hpp  wrapper.h  wrapper.hpp
src/cudahelper/: chrono.hpp  error.hpp  errorhandling.h  errorhandling.hpp  memory.h  memory.hpp
src/kernels/: .common.h~  .hello.h~  CMakeLists.txt  common.c  common.cpp  common.hpp  functionals.cu  functionals.hpp  hello.cu  hello.h  nos.cu  nos.hpp  rotate.cu  rotate.hpp  scan.cu  sort.cu  stats.cu  stats.hpp
t/: Cam1_V1.pgm  verify.pl  verify_cpp.pl
